--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -29,20 +30,21 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.firebaseui:firebase-ui:0.6.2'
-    compile 'com.specyci:residemenu:1.6+'
-    compile 'com.github.halysongoncalves:pugnotification:1.8.1'
-    compile 'com.github.lguipeng:BubbleView:1.0.1'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.firebaseui:firebase-ui:0.6.2'
+    implementation 'com.specyci:residemenu:1.6+'
+    implementation 'com.github.halysongoncalves:pugnotification:1.8.1'
+    implementation 'com.github.lguipeng:BubbleView:1.0.1'
 
-    compile 'com.google.android.gms:play-services-vision:9.8.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
-    compile 'com.amazonaws:aws-android-sdk-s3:2.6.+'
-    compile 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
-    compile 'com.amazonaws:aws-android-sdk-core:2.2.13'
-    compile 'com.amazonaws:aws-android-sdk-ddb:2.2.13'
+    implementation 'com.google.android.gms:play-services-vision:9.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation('com.amazonaws:aws-android-sdk-mobile-client:2.6.7@aar') { transitive = true; }
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.2.13'
+    implementation 'com.amazonaws:aws-android-sdk-ddb:2.2.13'
+
 
 }
-apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services'
