--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-cognito:2.6.+'
     implementation 'com.amazonaws:aws-android-sdk-core:2.2.13'
     implementation 'com.amazonaws:aws-android-sdk-ddb:2.2.13'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
 
 }
