--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.amazonaws:aws-android-sdk-core:2.2.13'
     implementation 'com.amazonaws:aws-android-sdk-ddb:2.2.13'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.nkzawa:socket.io-client:0.3.0'
 
 
 }
